--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
               <ul class="navbar-nav">
                 
                 <li class="nav-item">
-                  <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Our USP</a>
+                  <a href="#our-usp" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Our USP</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Meet the Experts</a>
+                    <a href="#teachers" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Meet the Experts</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Reviews</a>
+                    <a href="#reviews" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Reviews</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Events</a>
+                    <a href="#events" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Events</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Location</a>
+                    <a href="#location" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Location</a>
                 </li>
 
               </ul>
-            </div><a href="#" class="btn btn-primary ml-lg-3">Join Annu Classes</a>
+            </div><a href="https://forms.gle/oJD1zxxzLZPFiGoU7" target="_blank" class="btn btn-primary ml-lg-3">Join Annu Classes</a>
 
           </div>
         </div>
@@ -89,7 +89,7 @@
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters!</h1>
             <h1 class="mb-4">Curated coaching for CBSE VII - XII classes.</h1>
-            <a href="#" class="btn btn-primary btn-lg">Explore Annu Classes</a>
+            <a href="#our-usp" class="btn btn-primary btn-lg">Explore Annu Classes</a>
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
     </section>
 
     <!-- Teachers -->
-    <section class="pt-5">
+    <section id="teachers" class="pt-5">
         <div class="container">
 
             <div class="row mb-4 text-center">
@@ -194,7 +194,7 @@
 
 
     <!-- Reviews -->
-    <section class="bg-primary-alt">
+    <section id="reviews" class="bg-primary-alt">
         <div class="container">
 
             <div class="row mb-4 text-center">
@@ -306,7 +306,7 @@
 
 
     <!-- Events -->
-    <section class="bg-primary-3 has-divider text-light">
+    <section id="events" class="bg-primary-3 has-divider text-light">
         <!-- <div class="divider flip-y">
             <img src="" alt="graphical divider" data-inject-svg="">
         </div> -->
@@ -379,7 +379,7 @@
     </section>
 
     <!-- Location -->
-    <section>
+    <section id="location">
         <div class="container">
             <div class="row text-center">
                 <div class="col">
@@ -399,7 +399,7 @@
             <div class="card card-body border-0 o-hidden mb-0 bg-primary text-light">
               <div class="position-relative d-flex flex-column flex-md-row justify-content-between align-items-center">
                 <div class="h3 text-center mb-md-0">Admissions are open. Contact us for demo class</div>
-                <a href="#" class="btn btn-lg btn-white">Contact us</a>
+                <a href="https://forms.gle/oJD1zxxzLZPFiGoU7" target="_blank" class="btn btn-lg btn-white">Contact us</a>
               </div>
               <div class="decoration layer-0">
                 <img class="bg-primary-2" src="assets/img/decorations/deco-blob-1.svg" alt="deco-blob-1 decoration" data-inject-svg />
