Changed Balram Sir's photo and added teachers description

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row py-6 min-vh-80 align-items-center" data-aos="fade-up">
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters!</h1>
-            <h1 class="mb-4">Curated coaching for CBSE VII - XII classes.</h1>
+            <h1 class="mb-4">Coaching for CBSE VII - XII classes.</h1>
             <a href="#our-usp" class="btn btn-primary btn-lg">Explore Annu Classes</a>
           </div>
         </div>
@@ -151,9 +151,9 @@
                             <div class="mb-3">
                             </div>
                             <div class="h5">Gend Lal Sir</div>
-                            <p>
-                                Gend lal sir has 10+ years of teaching experience....
-                            </p>
+                            <p class="small"><strong>
+                                Gendlal Sir hails from Patwatoli and has 20+ years of teaching experience to guide students to achieve success be it in school or the competitive examinations. His unique style of teaching helps a student to develop creative thinking, improved imagination that provides them to secure good grades in examinations along with developing qualities that will be useful for the rest of life..
+                            </p></strong>
                         </div>
                     </div>
                 </div>
@@ -166,9 +166,9 @@
                             <div class="mb-3">
                             </div>
                             <div class="h5">Vikas Sir</div>
-                            <p>
-                                Vikas sir has 10+ years of teaching experience....
-                            </p>
+                            <p class="small"><strong>
+                                Vikash Sir is a meritorious, dedicated and hardworking person with 5+ years of teaching experience. His area of expertise is Mathematics and Physics and specializes in two-way teaching style and engages students in learning. Qualities that set him apart from others are his friendliness and approachability because he believes a teacher's job is to help students learn therefore, they must be easy to approach.
+                            </p></strong>
                         </div>
                     </div>
                 </div>
@@ -176,14 +176,14 @@
 
                 <div class="col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="600">
                     <div class="card">
-                        <img src="assets/img/teachers/annu-classes-balram-sir.jpg" alt="Balram Sir" class="card-img-top">
+                        <img src="assets/img/teachers/annu-classes-balram-sir.jpeg" alt="Balram Sir" class="card-img-top">
                         <div class="card-body align-items-start">
                             <div class="mb-3">
                             </div>
                             <div class="h5">Balram Sir</div>
-                            <p>
-                                Balram sir has 10+ years of teaching experience....
-                            </p>
+                            <p class="small"><strong>
+                               Balram Sir has 5+ years of teaching experience with deep knowledge in Chemistry and is passionate about teaching. He loves teaching and has superior presentation and organization skills. He spends endless hours outside of the classroom preparing, designing lessons, learning more (both about the subject matter specifically and how to teach, in general), participating in professional development, and thinking of fresh and interesting ways to teach the students.
+                            </p></strong>
                         </div>
                     </div>
                 </div>
