diminished the size of comments

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="col-sm-6 col-lg-4" data-isotope-item="" style="position: absolute;">
                 <div class="card card-body">
                 <div class="flex-grow-1 mb-3">
-                    <p class="text-small">
+                    <p class="small">
                         “Annu classes is one of the best institute. They have the best teachers. The teachers are so helpful and they are so experienced. They provide quality education and also gives expert advice. If you are really looking for quality coaching you should really go ahead with Annu classes.....”
                     </p>
                 </div>
@@ -223,7 +223,7 @@
             <div class="col-sm-6 col-lg-4" data-isotope-item="" style="position: absolute;">
                 <div class="card card-body">
                 <div class="flex-grow-1 mb-3">
-                    <p class="text-small">
+                    <p class="small">
                         “They have excellent way of teaching , whatever concepts u cannot understand in school they will guide u till the time you get that concept clear. Weekly tests are conducted to analyse the students performance and proper care is given to the students who are not scoring well.  Teachers are well experienced too.”
                     </p>
                 </div>
@@ -239,7 +239,7 @@
             <div class="col-sm-6 col-lg-4" data-isotope-item="" style="position: absolute;">
                 <div class="card card-body">
                 <div class="flex-grow-1 mb-3">
-                    <p class="text-small">
+                    <p class="small">
                     “Teachers at the classes are cooperative. They  have a strong hold on the subjects and explain the basics of everything very well. Their teaching techniques are very unique and help us understand and visualize the concepts in a simpler way.”
                     </p>
                 </div>
@@ -255,7 +255,7 @@
             <div class="col-sm-6 col-lg-4" data-isotope-item="" style="position: absolute;">
                 <div class="card card-body">
                 <div class="flex-grow-1 mb-3">
-                    <p class="text-small">
+                    <p class="small">
                     “Amazing quality of education here. It's rightly said that, new babies are cared more than elders by their parents. Annu Classes is just like that. Worth your time and energy.”
                     </p>
                 </div>
@@ -271,7 +271,7 @@
             <div class="col-sm-6 col-lg-4" data-isotope-item="" style="position: absolute;">
                 <div class="card card-body">
                 <div class="flex-grow-1 mb-3">
-                    <p class="text-small">
+                    <p class="small">
                     “Amzing place to get your basics rock solid. The teachers are dedicated and supportive. The environment is very nice because the teachers make sure that the learning is stressfree and students are self motivated.”
                     </p>
                 </div>
@@ -287,7 +287,7 @@
             <div class="col-sm-6 col-lg-4" data-isotope-item="" style="position: absolute;">
                 <div class="card card-body">
                 <div class="flex-grow-1 mb-3">
-                    <p class="text-small">
+                    <p class="small">
                     “Best classes in gaya town with very experienced teacher....And corporetive staff.”
                     </p>
                 </div>
