--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="row py-6 min-vh-80 align-items-center" data-aos="fade-up">
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters!</h1>
-            <h1 class="mb-4">Coaching for CBSE VII - XII classes.</h1>
+            <h1 class="mb-4">Coaching for CBSE VII - XII classes</h1>
             <a href="#our-usp" class="btn btn-primary btn-lg">Explore Annu Classes</a>
           </div>
         </div>
@@ -323,7 +323,7 @@
                 <div class="col text-center">
                   <h2 class="display-4 mx-xl-6">Events & Celebrations</h2>
                   <p class="lead">
-                    Learning without Fun would be grey and downright dull!
+                    Learning without Fun would be grey and downright dull !!
                   </p>
                 </div>
               </div>
