--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <title>Annu Classes - by Patwatoli teachers at Gaya town</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Annu Classes - by Patwatoli teachers at Gaya town">
+    <meta name="description" content="Annu Classes: Coaching for CBSE VII - XII classes (Mathematics, Physics, Chemistry, Biology) by Patwatoli teachers.">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
@@ -78,7 +78,7 @@
                 </li>
 
               </ul>
-            </div><a href="https://forms.gle/oJD1zxxzLZPFiGoU7" target="_blank" class="btn btn-primary ml-lg-3">Join Annu Classes</a>
+            </div><a href="https://annuclasses.com/enquiry.html" target="_blank" class="btn btn-primary ml-lg-3">Join Annu Classes</a>
 
           </div>
         </div>
@@ -424,7 +424,7 @@
                             <a href="#location" class="nav-link">Location</a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://forms.gle/oJD1zxxzLZPFiGoU7" target="_blank" class="nav-link">Join Annu Classes</a>
+                            <a href="https://annuclasses.com/enquiry.html" target="_blank" class="nav-link">Join Annu Classes</a>
                         </li>
                     </ul>
                 </div>
@@ -483,7 +483,7 @@
                     <h5>Any questions?</h5>
                     <p>Click on the button below to fill a short form and we promise to get back to you shortly.</p>
                     <p class="mt-3">
-                        <a href="https://forms.gle/oJD1zxxzLZPFiGoU7" target="_blank" class="btn btn-primary">Join Annu Classes</a>
+                        <a href="https://annuclasses.com/enquiry.html" target="_blank" class="btn btn-primary">Join Annu Classes</a>
                     </p>
     
                 </div>
