--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </li>
 
               </ul>
-            </div><a href="https://annuclasses.com/enquiry.html" target="_blank" class="btn btn-primary ml-lg-3">Join Annu Classes</a>
+            </div><a id="enquiry-header-nav" href="https://annuclasses.com/enquiry.html" target="_blank" class="btn btn-primary ml-lg-3">Join Annu Classes</a>
 
           </div>
         </div>
@@ -424,7 +424,7 @@
                             <a href="#location" class="nav-link">Location</a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://annuclasses.com/enquiry.html" target="_blank" class="nav-link">Join Annu Classes</a>
+                            <a id="enquiry-footer-nav" href="https://annuclasses.com/enquiry.html" target="_blank" class="nav-link">Join Annu Classes</a>
                         </li>
                     </ul>
                 </div>
@@ -483,7 +483,7 @@
                     <h5>Any questions?</h5>
                     <p>Click on the button below to fill a short form and we promise to get back to you shortly.</p>
                     <p class="mt-3">
-                        <a href="https://annuclasses.com/enquiry.html" target="_blank" class="btn btn-primary">Join Annu Classes</a>
+                        <a id="enquiry-footer-cta" href="https://annuclasses.com/enquiry.html" target="_blank" class="btn btn-primary">Join Annu Classes</a>
                     </p>
     
                 </div>
