Added link for facebook

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <title>Annu Classes - by Patwatoli teachers at Gaya town</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Annu Classes: Coaching for CBSE VII - XII classes (Mathematics, Physics, Chemistry, Biology) by Patwatoli teachers.">
+    <meta name="description" content="Annu Classes: Coaching for CBSE VI - XII classes (Mathematics, Physics, Chemistry)  by Patwatoli teachers with preparation of NTSE, KVPY, Olympiad and other competitive examinations">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
@@ -92,8 +92,8 @@
       <div class="container layer-2">
         <div class="row py-6 min-vh-80 align-items-center" data-aos="fade-up">
           <div class="col-lg-9 col-xl-8">
-            <h1 class="display-3">Where you study, matters!</h1>
-            <h1 class="mb-4">Coaching for CBSE VII - XII classes</h1>
+            <h1 class="display-3">Where you study, matters.</h1>
+            <h1 class="mb-4">Coaching for CBSE VI - XII classes with NTSE, KVPY and Olympiad preparation</h1>
             <a href="#our-usp" class="btn btn-primary btn-lg">Explore Annu Classes</a>
           </div>
         </div>
@@ -462,6 +462,18 @@
                                 <br>
                                 <a href="tel:+917783839910">+91 77 838 399 10</a>
                                 <span class="d-block text-muted text-small">All days, 10am - 7pm</span>
+                            </div>
+                        </li>
+                        <li class="mb-3 d-flex">
+                          <svg class="icon" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>Icon For Facebook</title>
+                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <rect opacity="0" x="0" y="0" width="24" height="24"></rect>
+                                    <path d="M22.676 0H1.324C.593 0 0 .593 0 1.324v21.352C0 23.408.593 24 1.324 24h11.494v-9.294H9.689v-3.621h3.129V8.41c0-3.099 1.894-4.785 4.659-4.785 1.325 0 2.464.097 2.796.141v3.24h-1.921c-1.5 0-1.792.721-1.792 1.771v2.311h3.584l-.465 3.63H16.56V24h6.115c.733 0 1.325-.592 1.325-1.324V1.324C24 .593 23.408 0 22.676 0"></path>
+                                </g>
+                            </svg>
+                            <div class="ml-3">
+                                <a href="https://www.facebook.com/annu.classes.gaya" target="_blank">facebook / annu-classes-gaya</a>
                             </div>
                         </li>
                         <li class="mb-3 d-flex">
