Scholarship links in homepage & other text changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <ul class="navbar-nav">
                 
                 <li class="nav-item">
-                  <a href="#our-usp" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Our USP</a>
+                  <a href="#why-choose-us" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Why Choose Us</a>
                 </li>
 
                 <li class="nav-item">
@@ -78,7 +78,7 @@
                 </li>
 
               </ul>
-            </div><a id="enquiry-header-nav" href="https://annuclasses.com/enquiry.html" target="_blank" class="btn btn-primary ml-lg-3">Join Annu Classes</a>
+            </div><a id="enquiry-header-nav" href="scholarship-2020.html" class="btn btn-primary ml-lg-3">Scholarship Program</a>
 
           </div>
         </div>
@@ -94,18 +94,25 @@
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters.</h1>
             <h1 class="mb-4">Coaching for CBSE VI - XII classes with NTSE, KVPY and Olympiad preparation</h1>
-            <a href="#our-usp" class="btn btn-primary btn-lg">Explore Annu Classes</a>
+            <h1 class="mb-4">
+                <a href="scholarship-2020.html">
+                  <span class="highlight-scholarship">
+                    2020 Scholarship program is open now!
+                  </span>
+                </a>
+              </h1>
+            <a href="scholarship-2020.html" class="btn btn-primary btn-lg">Explore Scholarship Program</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Our USP -->
-    <section id="our-usp" class="bg-primary-alt">
+    <!-- Why Choose Us -->
+    <section id="why-choose-us" class="bg-primary-alt">
         <div class="container">
             <div class="row mb-5 justify-content-center">
                 <div class="col text-center">
-                    <h2 class="display-4 mx-xl-6">Our USP</h2>
+                    <h2 class="display-4 mx-xl-6">Why Choose Us</h2>
                     <p class="lead">
                     How are we different from other coaching centers
                     </p>
@@ -409,7 +416,7 @@
                     <h5>Navigate</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a href="#our-usp" class="nav-link">Our USP</a>
+                            <a href="#why-choose-us" class="nav-link">Why Choose Us</a>
                         </li>
                         <li class="nav-item">
                             <a href="#experts" class="nav-link">Experts</a>
@@ -424,7 +431,10 @@
                             <a href="#location" class="nav-link">Location</a>
                         </li>
                         <li class="nav-item">
-                            <a id="enquiry-footer-nav" href="https://annuclasses.com/enquiry.html" target="_blank" class="nav-link">Join Annu Classes</a>
+                            <a id="enquiry-footer-nav" href="scholarship-2020.html" class="nav-link">Scholarship Program</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="enquiry-footer-nav" href="enquiry.html" target="_blank" class="nav-link">Join Annu Classes</a>
                         </li>
                     </ul>
                 </div>
@@ -492,10 +502,16 @@
                     </ul>
                 </div>
                 <div class="col-lg-5 col-xl-4 mt-3 mt-lg-0">
+                    <h5>Scholarship Program</h5>
+                    <p>Register for Scholarship program for new batches of classes VI - X starting from 01<sup>st</sup> April 2020 and avail up to 100% tution fee scholarship</p>
+                    <p class="mt-3">
+                        <a id="enquiry-footer-cta" href="scholarship-2020.html" class="btn btn-primary">Scholarship Program</a>
+                    </p>
+                    <br>
                     <h5>Any questions?</h5>
                     <p>Click on the button below to fill a short form and we promise to get back to you shortly.</p>
                     <p class="mt-3">
-                        <a id="enquiry-footer-cta" href="https://annuclasses.com/enquiry.html" target="_blank" class="btn btn-primary">Join Annu Classes</a>
+                        <a id="enquiry-footer-cta" href="enquiry.html" target="_blank" class="btn btn-primary">Join Annu Classes</a>
                     </p>
     
                 </div>
