minor text change

--- a/scholarship-2020-registration-form.html
+++ b/scholarship-2020-registration-form.html
@@ -37,7 +37,7 @@
             <div class="col text-center">
                 <img src="assets/img/icons/loader.gif" alt="Loader">
                 <br><br>
-                Loading Enquiry form..
+                Loading Scholarship Registration form..
                 <br><br>
                 <a href="https://forms.gle/obEeode11YkMzEwX7">Please click this link if Enquiry form does not load shortly.</a>
             </div>
