--- a/scholarship-2020.html
+++ b/scholarship-2020.html
@@ -111,7 +111,7 @@
         <div class="row text-center mb-6">
 
           <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="mb-1 text-primary">21st March</h2>
+            <h2 class="mb-1 text-primary">21st February</h2>
             <p class="lead">Registration <br>open date</p>
           </div>
 
@@ -160,7 +160,7 @@
                 <div>
                   <h5>1. Register for Scholarship Test</h5>
                   <p>
-                    You can easily <a href="#" target="_blank">apply online</a> or visit our office near Azad Park in Murarpur, Gaya to fill registration form (map <a href="#location">location</a> below).
+                    You can easily <a href="scholarship-2020-registration-form.html" target="_blank">apply online</a> or visit our office near Azad Park in Murarpur, Gaya to fill registration form (map <a href="#location">location</a> below).
                   </p>
                 </div>
               </li>
