Changed tuition spelling in index and scholarship webpage

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 </div>
                 <div class="col-lg-5 col-xl-4 mt-3 mt-lg-0">
                     <h5>Scholarship Program</h5>
-                    <p>Register for Scholarship program for new batches of classes VI - X starting from 01<sup>st</sup> April 2020 and avail up to 100% tution fee scholarship</p>
+                    <p>Register for Scholarship program for new batches of classes VI - X starting from 01<sup>st</sup> April 2020 and avail up to 100% tuition fee scholarship</p>
                     <p class="mt-3">
                         <a id="enquiry-footer-cta" href="scholarship-2020.html" class="btn btn-primary">Scholarship Program</a>
                     </p>
