--- a/scholarship-2020.html
+++ b/scholarship-2020.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <title>Annu Classes - Scholarship 2020 for class VI-X students for new batches starting from 01st April 2020.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Annu Classes: Avail upto 100% scholarship on Tution fees for classes VI - X for new batches starting from 01st April 2020. Scholarship test date on 15th & 22nd March 2020. Last date to apply: 14th March 2020. Visit our website to apply online.">
+    <meta name="description" content="Annu Classes: Avail upto 100% scholarship on Tuition fees for classes VI - X for new batches starting from 01st April 2020. Scholarship test date on 15th & 22nd March 2020. Last date to apply: 14th March 2020. Visit our website to apply online.">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
@@ -81,7 +81,7 @@
           <div class="col-xl-7 col-lg-8 col-md-9">
             <div class="mb-6"></div>
             <h1 class="display-3">Scholarship Program for 2020</h1>
-            <p class="lead">Register for Scholarship program for new batches of classes VI - X starting from 01<sup>st</sup> April 2020 and avail up to 100% tution fee scholarship</p>
+            <p class="lead">Register for Scholarship program for new batches of classes VI - X starting from 01<sup>st</sup> April 2020 and avail up to 100% tuition fee scholarship</p>
             <div class="d-flex flex-column flex-sm-row justify-content-center mt-4">
               <a href="scholarship-2020-registration-form.html" target="_blank" class="btn btn-lg btn-primary mx-2 mb-2 mb-sm-0">Register Online</a>
             </div>
@@ -178,7 +178,7 @@
                 <div>
                   <h5>3. Appear for Scholarship Test</h5>
                   <p>
-                    Appear for Test as per the date mentioned on your Admit card (either 15th / 22nd March). Give your best and we are sure that you will be among top scorers to avail tution fee scholarship. 
+                    Appear for Test as per the date mentioned on your Admit card (either 15th / 22nd March). Give your best and we are sure that you will be among top scorers to avail tuition fee scholarship. 
                   </p>
                 </div>
               </li>
@@ -231,7 +231,7 @@
               <div class="ml-3">
                 <h5>3. Appear for Scholarship Test</h5>
                 <p>
-                  Appear for Test as per the date mentioned on your Admit card (either 15th / 22nd March). Give your best and we are sure that you will be among top scorers to avail tution fee scholarship.
+                  Appear for Test as per the date mentioned on your Admit card (either 15th / 22nd March). Give your best and we are sure that you will be among top scorers to avail tuition fee scholarship.
                 </p>
               </div>
             </div>
