--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                 </g>
                             </svg>
                             <div class="ml-3">
-                                <a href="Whatsapp:+917783839910">+91 82 480 505 43</a>
+                                <a href="https://wa.me/918248050543">Whatsapp (+91 82 480 505 43)</a>
                                 <span class="d-block text-muted text-small">All days, 10am - 7pm</span>
                             </div>
                         </li>
