--- a/scholarship-2020.html
+++ b/scholarship-2020.html
@@ -78,6 +78,23 @@
     <section class="bg-primary-3 text-light text-center has-divider header-desktop-app">
       <div class="container">
         <div class="row justify-content-center">
+
+			<!-- Inserting Banner for CoronaVirus Update -->
+			<div class="row">
+			<div class="col">
+            <div class="card card-body border-0 o-hidden mb-0 bg-primary text-light">
+              <div class="position-relative d-flex flex-column flex-md-row justify-content-between align-items-center">
+                <div class="h3 text-center mb-md-0"><span class="text-primary-2">NOTICE</span><br><br>
+                	Scholarship Test on 22<sup>nd</sup> March has been Postponed due to ongoing Cronavirus situation <br>New dates will be announced soon</div>
+      
+              </div>
+             
+            </div>
+
+          </div>
+      </div>
+			<!-- End Off Inserting Banner for CoronaVirus Update -->
+
           <div class="col-xl-7 col-lg-8 col-md-9">
             <div class="mb-6"></div>
             <h1 class="display-3">Scholarship Program for 2020</h1>
