--- a/scholarship-2020.html
+++ b/scholarship-2020.html
@@ -85,7 +85,7 @@
             <div class="card card-body border-0 o-hidden mb-0 bg-primary text-light">
               <div class="position-relative d-flex flex-column flex-md-row justify-content-between align-items-center">
                 <div class="h3 text-center mb-md-0"><span class="text-primary-2">NOTICE</span><br><br>
-                	Scholarship Test on 22<sup>nd</sup> March has been Postponed due to ongoing Cronavirus situation <br>New dates will be announced soon</div>
+                	Scholarship Test on 22<sup>nd</sup> March has been Postponed due to ongoing Coronavirus situation <br>New dates will be announced soon</div>
       
               </div>
              
