Adding online E-Learning platform link on home page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </li>
 
               </ul>
-            </div><a id="enquiry-header-nav" href="scholarship-2020.html" class="btn btn-primary ml-lg-3">Scholarship Program</a>
+            </div><a id="elearning-header-nav" href="https://online.annuclasses.com/" target="_new" class="btn btn-primary ml-lg-3">Online E-Learning</a>
 
           </div>
         </div>
@@ -95,13 +95,13 @@
             <h1 class="display-3">Where you study, matters.</h1>
             <h1 class="mb-4">Coaching for CBSE VI - XII classes with NTSE, KVPY and Olympiad preparation</h1>
             <h1 class="mb-4">
-                <a href="scholarship-2020.html">
-                  <span class="highlight-scholarship">
+                <a href="scholarship-2020.html" target="_new">
+                  <span class="highlight-main">
                     2020 Scholarship program is open now!
                   </span>
                 </a>
               </h1>
-            <a href="scholarship-2020.html" class="btn btn-primary btn-lg">Explore Scholarship Program</a>
+            <a href="https://online.annuclasses.com/" target="_new" class="btn btn-primary btn-lg">Explore Online E-Learning Platform</a> &nbsp;&nbsp; <a href="scholarship-2020.html" target="_new" class="btn btn-primary-3 btn-lg">Apply for Scholarship Program</a>
           </div>
         </div>
       </div>
@@ -431,6 +431,9 @@
                             <a href="#location" class="nav-link">Location</a>
                         </li>
                         <li class="nav-item">
+                            <a id="online-footer-nav" href="#online e-learning" class="nav-link">Online E-Learning</a>
+                        </li>
+                        <li class="nav-item">
                             <a id="enquiry-footer-nav" href="scholarship-2020.html" class="nav-link">Scholarship Program</a>
                         </li>
                         <li class="nav-item">
@@ -515,14 +518,14 @@
                     </ul>
                 </div>
                 <div class="col-lg-5 col-xl-4 mt-3 mt-lg-0">
-                    <h5>Scholarship Program</h5>
-                    <p>Register for Scholarship program for new batches of classes VI - X starting from 01<sup>st</sup> April 2020 and avail up to 100% tuition fee scholarship</p>
+                    <h5>Online E-Learning Platform</h5>
+                    <p>We have launched our E-Learning platform. Don't let current Coronavirus lockdown stop you from learning. Please make use of it. Click on below button to access</p>
                     <p class="mt-3">
-                        <a id="enquiry-footer-cta" href="scholarship-2020.html" class="btn btn-primary">Scholarship Program</a>
+                        <a id="online-footer-cta" href="https://online.annuclasses.com/" class="btn btn-primary">Online E-Learning</a>
                     </p>
                     <br>
                     <h5>Any questions?</h5>
-                    <p>Click on the button below to fill a short form and we promise to get back to you shortly.</p>
+                    <p>Click on the button below to fill a form and we promise to get back to you shortly.</p>
                     <p class="mt-3">
                         <a id="enquiry-footer-cta" href="enquiry.html" target="_blank" class="btn btn-primary">Join Annu Classes</a>
                     </p>
