Akash Sir's desc added and Covid pics

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <title>Annu Classes - by Patwatoli teachers at Gaya town</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Annu Classes: Coaching for CBSE VI - XII classes (Mathematics, Physics, Chemistry)  by Patwatoli teachers with preparation of NTSE, KVPY, Olympiad and other competitive examinations">
+    <meta name="description" content="Annu Classes: Coaching for CBSE VII - XII classes (Mathematics, Physics, Chemistry)  by Patwatoli teachers with preparation of NTSE, KVPY, Olympiad and other competitive examinations">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
@@ -93,15 +93,22 @@
         <div class="row py-6 min-vh-80 align-items-center" data-aos="fade-up">
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters.</h1>
-            <h1 class="mb-4">Coaching for CBSE VI - XII classes with NTSE, KVPY and Olympiad preparation</h1>
+            <h1 class="mb-4">Coaching for CBSE VII - XII classes with NTSE, KVPY and Olympiad preparation</h1>
             <h1 class="mb-4">
                 <a href="scholarship-2020.html" target="_new">
                   <span class="highlight-main">
-                    2020 Scholarship program is open now!
+                    We've resumed offline classes at coaching center with requisite precautions for COVID.
                   </span>
                 </a>
-              </h1>
-            <a href="https://online.annuclasses.com/" target="_new" class="btn btn-primary btn-lg">Explore Online E-Learning Platform</a> &nbsp;&nbsp; <a href="scholarship-2020.html" target="_new" class="btn btn-primary-3 btn-lg">Apply for Scholarship Program</a>
+            </h1>
+            <h3 class="mb-4">
+                <a href="scholarship-2020.html" target="_new">
+                  <span class="highlight-main">
+                    You can also subscribe to our online e-learning platform.
+                  </span>
+                </a>
+            </h3>
+            <a href="https://online.annuclasses.com/" target="_new" class="btn btn-primary btn-lg">Access Online E-Learning Platform</a>
           </div>
         </div>
       </div>
@@ -163,7 +170,7 @@
               </div>
 
             <div class="row mb-4">
-                <div class="col-xl-4 col-lg-4 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
+                <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">20+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-gend-lal-sir-288x288.jpg" alt="Gend Lal Sir" class="avatar avatar-xlg mb-3">
@@ -175,19 +182,25 @@
                     </div>
                   </div>
 
-                  <div class="col-xl-4 col-lg-4 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
+                  <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">5+ years teaching experience</span>
-                      <img src="assets/img/teachers/annu-classes-vikas-sir-288x288.jpg" alt="Vikas Sir" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Vikas Sir</h5>
-                      <p class="mb-0">Vikash Sir is a meritorious, dedicated and hardworking person with 5+ years of teaching experience. 
-                          He teaches Mathematics and Physics and specializes in two-way teaching style and engages students in learning. 
-                          Qualities that set him apart from others are his friendliness and approachability because he believes a teacher's job is 
-                          to help students.</p>
+                      <img src="assets/img/teachers/annu-classes-akash-sir-288x288.jpg" alt="Akash Sir" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Akash Sir</h5>
+                      <p class="mb-0">After cracking India's most challenging engineering exam IIT-JEE, Akash Sir has set forth his motive to guide students in their academic journey. He has also excelled in multiple state and national level competitive examinations. His passion, hard work, guidance and uniqueness in teaching will help students find their potential & achieve best outcomes.</p>
                     </div>
                   </div>
 
-                  <div class="col-xl-4 col-lg-4 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
+                  <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
+                    <div class="card card-lg card-body align-items-center">
+                      <span class="badge badge-primary badge-top">5+ years teaching experience</span>
+                      <img src="assets/img/teachers/annu-classes-vikash-sir-288x288.jpg" alt="Vikash Sir" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Vikash Sir</h5>
+                      <p class="mb-0">Vikash Sir is a meritorious, dedicated and hardworking person with 5+ years of teaching experience. He teaches Mathematics and Physics and specializes in two-way teaching style and engages students in learning. Qualities that set him apart from others are his friendliness and approachability because he believes a teacher's job is to help a student to achieve their dream.</p>
+                    </div>
+                  </div>
+
+                  <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">2+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-balram-sir-288x288.jpg" alt="Balram Sir" class="avatar avatar-xlg mb-3">
@@ -327,10 +340,36 @@
     <section id="events">
         <div class="container">
             <div class="row mb-5 justify-content-center">
+              <div class="col text-center">
+                <h2 class="display-4 mx-xl-6">COVID Precautions during ongoing classes</h2>
+                <p class="lead"></p>
+              </div>
+            </div>
+
+            <div class="row mb-5">
+                <div class="col-6 col-md-4">
+                    <a href="assets/img/covid/annu-classes-covid-precautions-1.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                        <img src="assets/img/covid/annu-classes-covid-precautions-1.jpg" alt="Covid precautions at Annu Classes" class="rounded">
+                    </a>
+                </div>
+                <div class="col-6 col-md-4">
+                    <a href="assets/img/covid/annu-classes-covid-precautions-2.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                        <img src="assets/img/covid/annu-classes-covid-precautions-2.jpg" alt="Covid precautions at Annu Classes" class="rounded">
+                    </a>
+                </div>
+                <div class="col-6 col-md-4">
+                    <a href="assets/img/covid/annu-classes-covid-precautions-3.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                        <img src="assets/img/covid/annu-classes-covid-precautions-3.jpg" alt="Covid precautions at Annu Classes" class="rounded">
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="row mb-2 justify-content-center">
                 <div class="col text-center">
                   <h2 class="display-4 mx-xl-6">Events & Celebrations</h2>
                   <p class="lead">
-                    Learning without Fun would be grey and downright dull !!
+                    Before COVID era &#128512;
                   </p>
                 </div>
               </div>
