Added crash course details 2021

--- a/index.html
+++ b/index.html
@@ -95,22 +95,74 @@
             <h1 class="display-3">Where you study, matters.</h1>
             <h1 class="mb-4">Coaching for CBSE VII - XII classes with NTSE, KVPY and Olympiad preparation</h1>
             <h1 class="mb-4">
-                <a href="scholarship-2020.html" target="_new">
-                  <span class="highlight-main">
-                    We've resumed offline classes at coaching center with requisite precautions for COVID.
-                  </span>
+              <span>
+                We've resumed offline classes at coaching center with requisite precautions for COVID.
+              </span>
+            </h1>
+            <h1 class="mb-4">
+                <a href="#crash-courses">
+                  <div class="row">
+                    <div class="col-1">
+                      &#x261B;
+                    </div>
+                    <div class="col-11">
+                      <span class="highlight-main">
+                        New batches of Crash Courses for Classes X & XII starting from <br>7<sup>th</sup> January, 2021
+                      </span>
+                    </div>
+                  </div>
                 </a>
             </h1>
-            <h3 class="mb-4">
-                <a href="scholarship-2020.html" target="_new">
-                  <span class="highlight-main">
-                    You can also subscribe to our online e-learning platform.
-                  </span>
-                </a>
-            </h3>
             <a href="https://online.annuclasses.com/" target="_new" class="btn btn-primary btn-lg">Access Online E-Learning Platform</a>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- Crash Course for Xth and XIIth starting from 7th Jan 2021 -->
+    <section id="crash-courses">
+      <div class="container">
+
+        <div class="row justify-content-center text-center mb-2">
+          <div class="col text-center">
+            <h2 class="display-4 mx-xl-6">Short Term Revision Courses</h2>
+            <p class="lead">
+              Introducing Crash Courses for <strong>Class X<sup>th</sup></strong> (All Subjects) and <strong>Class XII <sup>th</sup></strong> (Physics, Chemistry and Mathematics)
+              <br>
+              <br> 
+              New batches starting from <strong>7<sup>th</sup> January, 2021</strong>
+            </p>
+          </div>
+        </div>
+
+        <div class="row justify-content-center position-relative mb-4">
+          <div class="col">
+            <img src="assets/img/annuclasses-crash-course-2021.png" alt="Crash courses for classes X & XII at Annu Classes" class="rounded">
+          </div>
+        </div>
+
+        <div class="row text-center">
+          <div class="col-md-4 mb-3 mb-md-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+            <div class="px-xl-2">
+              <div class="process-circle bg-primary mb-3 d-inline-flex">1</div>
+              <h4>Complete syllabus with <br>Doubt sessions</h4>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3 mb-md-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+            <div class="px-xl-2">
+              <div class="process-circle bg-primary-2 mb-3 d-inline-flex">2</div>
+              <h4>Section wise <br>Test series</h4>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3 mb-md-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+            <div class="px-xl-2">
+              <div class="process-circle bg-primary-3 mb-3 d-inline-flex">3</div>
+              <h4>Practice of Previous years' <br>Question papers</h4>
+            </div>
+          </div>
+        </div>
+
+        
       </div>
     </section>
 
