--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </li>
 
               </ul>
-            </div><a id="elearning-header-nav" href="https://online.annuclasses.com/" target="_new" class="btn btn-primary ml-lg-3">Online E-Learning</a>
+            </div><a id="elearning-header-nav" href="https://online.annuclasses.com/" target="_new" class="btn btn-primary ml-lg-3">E-Learning Platform</a>
 
           </div>
         </div>
@@ -93,34 +93,20 @@
         <div class="row py-6 min-vh-80 align-items-center" data-aos="fade-up">
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters.</h1>
-            <h1 class="mb-4">Coaching for CBSE VII - XII classes with NTSE, KVPY and Olympiad preparation</h1>
-            <h1 class="mb-4">
+            <h2 class="mb-4">Coaching for CBSE VII - XII classes with NTSE, KVPY and Olympiad preparation</h2>
+            <h4 class="mb-4">
               <span>
-                We've resumed offline classes at coaching center with requisite precautions for COVID.
+                We've paused classes at coaching center for safety of our students. Continue to use our E-Learning Platform for coursework as advised by your instructors
               </span>
-            </h1>
-            <h1 class="mb-4">
-                <a href="#crash-courses">
-                  <div class="row">
-                    <div class="col-1">
-                      &#x261B;
-                    </div>
-                    <div class="col-11">
-                      <span class="highlight-main">
-                        New batches of Crash Courses for Classes X & XII starting from <br>7<sup>th</sup> January, 2021
-                      </span>
-                    </div>
-                  </div>
-                </a>
-            </h1>
-            <a href="https://online.annuclasses.com/" target="_new" class="btn btn-primary btn-lg">Access Online E-Learning Platform</a>
+            </h4>
+            <a href="https://online.annuclasses.com/" target="_new" class="btn btn-primary btn-lg">Access E-Learning Platform</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Crash Course for Xth and XIIth starting from 7th Jan 2021 -->
-    <section id="crash-courses">
+   <!-- Crash Course for Xth and XIIth starting from 7th Jan 2021 -->
+   <!--  <section id="crash-courses">
       <div class="container">
 
         <div class="row justify-content-center text-center mb-2">
@@ -164,7 +150,7 @@
 
         
       </div>
-    </section>
+    </section> -->
 
     <!-- Why Choose Us -->
     <section id="why-choose-us" class="bg-primary-alt">
@@ -191,6 +177,7 @@
             
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="mx-auto mb-4">
+
                 <img src="assets/img/annuclasses-focus.png" alt="Focussed" width="96" height="96" />
                 </div>
                 <h4>Focussed</h4>
@@ -256,7 +243,7 @@
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">2+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-balram-sir-288x288.jpg" alt="Balram Sir" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Balram Sir</h5>
+                      <h5 class="mb-2">Shally Ma'm</h5>
                       <p class="mb-0">Balram Sir has 2+ years of teaching experience with deep knowledge in Chemistry. 
                           He loves teaching and has superior presentation and organization skills. When he is not teaching, he spends endless hours for 
                           designing lessons, classroom material preparations, upskilling himself, professional development, and devising 
