--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h2 class="mb-4">Coaching for CBSE VII - XII classes with NTSE, KVPY and Olympiad preparation</h2>
             <h4 class="mb-4">
               <span>
-                We've paused classes at coaching center for safety of our students. Continue to use our E-Learning Platform for coursework as advised by your instructors
+                We are resuming classes at coaching center from 7th Feb (Monday). Also, continue to use our E-Learning Platform for coursework as advised by your instructors
               </span>
             </h4>
             <a href="https://online.annuclasses.com/" target="_new" class="btn btn-primary btn-lg">Access E-Learning Platform</a>
@@ -214,7 +214,7 @@
                       <span class="badge badge-primary badge-top">20+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-gend-lal-sir-288x288.jpg" alt="Gend Lal Sir" class="avatar avatar-xlg mb-3">
                       <h5 class="mb-2">Gend Lal Sir</h5>
-                      <p class="mb-0">Gendlal Sir hails from Patwatoli and has 20+ years of experience in teaching students 
+                      <p class="mb-0">Gendlal Sir hails from Patwatoli and has 23+ years of experience in teaching students 
                           for school as well competitive examinations. His unique style of teaching methods help students 
                           develop creative thinking, improved imagination which helps them secure good grades in examinations along 
                           with development of skills that are useful for rest of their lives.</p>
@@ -235,19 +235,16 @@
                       <span class="badge badge-primary badge-top">5+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-vikash--sir-288x288.jpg" alt="Vikash Sir" class="avatar avatar-xlg mb-3">
                       <h5 class="mb-2">Vikash Sir</h5>
-                      <p class="mb-0">Vikash Sir is a meritorious, dedicated and hardworking person with 5+ years of teaching experience. He teaches Mathematics and Physics and specializes in two-way teaching style and engages students in learning. Qualities that set him apart from others are his friendliness and approachability because he believes a teacher's job is to help a student to achieve their dream.</p>
+                      <p class="mb-0">Vikash Sir is a meritorious, dedicated and hardworking person with 7+ years of teaching experience. He teaches Mathematics and Physics and specializes in two-way teaching style and engages students in learning. Qualities that set him apart from others are his friendliness and approachability because he believes a teacher's job is to help a student to achieve their dream.</p>
                     </div>
                   </div>
 
                   <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">2+ years teaching experience</span>
-                      <img src="assets/img/teachers/annu-classes-balram-sir-288x288.jpg" alt="Balram Sir" class="avatar avatar-xlg mb-3">
+                      <img src="assets/img/teachers/annu-classes-shally-mam-288x288.jpg" alt="Shally Ma'm" class="avatar avatar-xlg mb-3">
                       <h5 class="mb-2">Shally Ma'm</h5>
-                      <p class="mb-0">Balram Sir has 2+ years of teaching experience with deep knowledge in Chemistry. 
-                          He loves teaching and has superior presentation and organization skills. When he is not teaching, he spends endless hours for 
-                          designing lessons, classroom material preparations, upskilling himself, professional development, and devising 
-                          interesting ways of teaching.</span>
+                      <p class="mb-0">Shally Ma'm has 2+ years of teaching experience with deep knowledge in Social Science. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours for designing lessons, classroom material preparations, upskilling himself, professional development, and devising interesting ways of teaching.</span>
                     </div>
                   </div>
 
